--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,14 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
+  background-image: url(https://img.freepik.com/foto-gratis/carton-blanco-arrugado_95678-119.jpg?w=1380&t=st=1679870279~exp=1679870879~hmac=8b3a994ad2c3a249953d5e67b37520a02f40aef3b245f6cf22606fa1218f725e);
+  background-size: cover;
 }
-
+.container{
+  color:rgb(88, 14, 14);
+  font-weight: 800;
+  
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
